Moving to a final folder structre that makes a bit more sense.

--- a/content/posts/formatstyle/style-deep-dives/dates/iso8601.md
+++ b/content/posts/formatstyle/style-deep-dives/dates/iso8601.md
@@ -2,6 +2,7 @@
 title: "Date.Iso8601FormatStyle"
 date: 2022-03-12T19:19:56-07:00
 draft: false
+aliases: [/posts/date-iso8601formatstyle/]
 tags: [ios15, formatstyle, deepdive]
 ---
 
