- Adds AttributedStyle Output post - All other FormatStyles not say if they support attributed string output or not - Adds Ko-Fi to sidebar - Adds Swift-UI post for FormatStyle Deep Dive

--- a/content/posts/formatstyle/style-deep-dives/dates/iso8601.md
+++ b/content/posts/formatstyle/style-deep-dives/dates/iso8601.md
@@ -10,6 +10,8 @@ tags: [ios15, formatstyle, deepdive, development, swift, swiftui]
 
 Very much a single purpose formatter, this allows us to output our dates as the [ISO 8601 Standard for dates](https://en.wikipedia.org/wiki/ISO_8601).
 
+> Note: This style **cannot** output `AttributedString` values by appending `.attributed`.
+
 <hr>
 
 [Download the Xcode Playground with all examples](https://github.com/brettohland/FormatStylesDeepDive/)
